--- a/age_calculator.html
+++ b/age_calculator.html
@@ -51,29 +51,7 @@
     <div class="container">
       <h1>Age Calculator</h1>
       <form id="ageForm">
-        <input
-          type="number"
-          id="day"
-          placeholder="Day (DD)"
-          min="1"
-          max="31"
-          required
-        />
-        <input
-          type="number"
-          id="month"
-          placeholder="Month (MM)"
-          min="1"
-          max="12"
-          required
-        />
-        <input
-          type="number"
-          id="year"
-          placeholder="Year (YYYY)"
-          min="1900"
-          required
-        />
+        <input type="date" id="birthDate" required />
         <button type="button" onclick="calculateAge()">Calculate Age</button>
       </form>
       <div class="result" id="result"></div>
@@ -81,18 +59,15 @@
 
     <script>
       function calculateAge() {
-        const day = parseInt(document.getElementById("day").value);
-        const month = parseInt(document.getElementById("month").value) - 1;
-        const year = parseInt(document.getElementById("year").value);
-
-        if (!day || !month || !year) {
+        const birthDateInput = document.getElementById("birthDate").value;
+        if (!birthDateInput) {
           document.getElementById("result").innerText =
-            "Please enter a valid date!";
+            "Please select a valid date!";
           return;
         }
 
         const today = new Date();
-        const birthDate = new Date(year, month, day);
+        const birthDate = new Date(birthDateInput);
         if (birthDate > today) {
           document.getElementById("result").innerText =
             "The birthdate cannot be in the future!";
@@ -103,6 +78,7 @@
         const monthDiff = today.getMonth() - birthDate.getMonth();
         const dayDiff = today.getDate() - birthDate.getDate();
 
+        // Adjust for incomplete year
         if (monthDiff < 0 || (monthDiff === 0 && dayDiff < 0)) {
           age--;
         }
